compiler/testData/diagnostics/tests/annotations/kt47484_4.fir.kt
interface I {
    fun <T
            > f<!SYNTAX!><!> = <!TOO_MANY_ARGUMENTS!>C<!>(
        <!SYNTAX!><!SYNTAX!><!>.<!><!TOO_MANY_ARGUMENTS!>f<!><!SYNTAX!><!>
    class C : I<!SYNTAX!><!>
